<resources>
    <string name="app_name">Teendők</string>
    <string name="btn_animation">Animáció</string>
    <string name="btn_popup">Felugró ablak</string>
    <string name="popup_close">Bezárás</string>
    <string name="menu_anim">Animáció</string>
    <string name="menu_popup">Felugró ablak</string>
    <string name="remove_all_menu">Összes törlése</string>
    <string name="create_todo_title">Teendő címe</string>
    <string name="create_todo_description">Teendő leírása</string>
    <string name="create_todo_assignee">Teendő felelőse</string>
    <string name="create_todo_button">Létrehozás</string>
    <string name="create_todo_label">Teendő hozzáadása</string>
    <string name="create_todo_menu">Hozzáadás</string>
    <string name="call_button">Hívás</string>
    <string name="login_loginbtn">Belépés</string>
    <string name="login_password">Jelszó</string>
    <string name="login_email">Email</string>
    <string name="login_register">Regisztráció</string>
    <string name="title_login">Belépés</string>
    <string name="menu_logout">Kilépés</string>
</resources>
