<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="hu.netacademia.todoapp.CreateTodoActivity">

    <EditText
        android:id="@+id/createTitleET"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_todo_title"/>

    <EditText
        android:id="@+id/createDecscriptionET"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_todo_description"/>

    <EditText
        android:id="@+id/createAssigneeET"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_todo_assignee"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTodoBTN"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:text="@string/create_todo_button"/>
</LinearLayout>
