<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"

    android:orientation="vertical"
    tools:context="hu.netacademia.todoapp.DemoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#ffffff">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/animateBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/btn_animation"
            android:textColor="@drawable/button_text_color" />


        <Button
            android:id="@+id/popupBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_popup" />

        <Button
            android:id="@+id/callBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_button" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/circle" />

    </LinearLayout>

</LinearLayout>
